--- a/index.html
+++ b/index.html
@@ -3,11 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <title>我的个人主页</title>
+    <!-- 引入 Font Awesome 图标库 (用于显示按钮上的小图标) -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
-        body { font-family: sans-serif; text-align: center; padding-top: 50px; background-color: #f0f2f5; }
-        h1 { color: #333; }
-        p { color: #666; }
-        .card { background: white; width: 60%; margin: 0 auto; padding: 20px; border-radius: 10px; box-shadow: 0 4px 6px rgba(0,0,0,0.1); }
+        body { 
+            font-family: 'Segoe UI', sans-serif; /* 稍微优化了一下字体 */
+            text-align: center; 
+            padding-top: 50px; 
+            background-color: #f0f2f5; 
+            margin: 0;
+        }
+        h1 { color: #333; margin-bottom: 20px; }
+        p { color: #666; line-height: 1.6; }
+        
+        .card { 
+            background: white; 
+            width: 60%; 
+            max-width: 800px; /* 增加最大宽度，防止在大屏幕上太宽 */
+            margin: 0 auto; 
+            padding: 40px; 
+            border-radius: 10px; 
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1); 
+        }
+
+        /* --- 新增的按钮样式 --- */
+        .project-section {
+            margin-top: 40px;
+            padding-top: 20px;
+            border-top: 1px solid #eee; /* 加一条淡淡的分隔线 */
+        }
+        
+        .btn {
+            display: inline-block;
+            background-color: #2563eb; /* 漂亮的蓝色 */
+            color: white;
+            padding: 12px 24px;
+            text-decoration: none; /* 去掉下划线 */
+            border-radius: 8px; /* 圆角 */
+            font-weight: bold;
+            transition: background-color 0.3s, transform 0.2s; /* 添加动画效果 */
+            margin-top: 15px;
+        }
+
+        .btn:hover {
+            background-color: #1d4ed8; /* 鼠标悬停时变深色 */
+            transform: translateY(-2px); /* 鼠标悬停时微微上浮 */
+        }
     </style>
 </head>
 <body>
@@ -15,6 +56,14 @@
         <h1>你好，欢迎来到我的网站！</h1>
         <p>这是我利用 GitHub Pages 搭建的第一个网页。</p>
         <p>虽然现在还很简单，但我已经迈出了第一步。</p>
+
+        <!-- 新增的气象看板入口 -->
+        <div class="project-section">
+            <h3 style="color: #444;">我的数据科学项目</h3>
+            <a href="weather.html" class="btn">
+                <i class="fas fa-chart-line" style="margin-right: 8px;"></i> 查看实时气象预测看板
+            </a>
+        </div>
     </div>
 </body>
 </html>
